UHG318 Paragraph Spacing Issue.
git-svn-id: https://drive.kana.com/SVN/UHG/IQ/KMRestAPI@3169 b552034e-f646-462b-9072-8d94b4fb3fa1

--- a/ContentServices/src/main/webapp/css/content.css
+++ b/ContentServices/src/main/webapp/css/content.css
@@ -448,7 +448,7 @@ button {
 		}
 			.content_body_field_data p {
 				overflow-wrap: break-word;
-				margin: 0px;
+				margin: 10px;
 			}
 			.content_body_field_data a {
 				text-decoration: none;
